# S3_OPENGL_Projet

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
GLImac-Template-build/: CMakeCache.txt  Makefile  cmake_install.cmake
GLImac-Template-build/TP3/: Makefile  TP3_exo_1  TP3_exo_2  TP3_exo_3  TP3_exo_4  TP3_exo_5  TP3_exo_6  TP3_exo_7  cmake_install.cmake
GLImac-Template-build/TP3/shaders/: normal.fs.glsl
GLImac-Template-build/TP_template/: Makefile  TP_template_SDLtemplate  cmake_install.cmake
GLImac-Template-build/glimac/: Makefile  cmake_install.cmake
GLImac-Template/TP3/: exo_1.cpp  exo_2.cpp  exo_3.cpp  exo_4.cpp  exo_5.cpp  exo_6.cpp  exo_7.cpp
GLImac-Template/TP3/shaders/: 3D.vs.glsl  multiTex3D.fs.glsl
GLImac-Template/glimac/include/glimac/: FreeflyCamera.hpp  TrackballCamera.hpp
GLImac-Template/glimac/src/: FreeflyCamera.cpp  TrackballCamera.cpp
doc/: controles.txt  radialBasisFunctions - Explications.html
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile-html  Doxyfile.in  Makefile  cmake_install.cmake
doxygen/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  graph_legend.html  index.html
doxygen/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  refman.tex
include/: FreeflyCamera.hpp  TYPECUBE.hpp  all.hpp  cube.hpp  display.hpp  handleClick.hpp  menu.hpp  myshader.hpp  palette.hpp  pinceau.hpp  radialBasisFunctions.hpp  selector.hpp  shader.hpp  skybox.hpp  sound.hpp  texture.hpp  typeCube.hpp  vertex.hpp  world.hpp
lib/glimac/: Makefile  cmake_install.cmake
lib/glimac/include/: FreeflyCamera.hpp  Geometry.hpp  glm.hpp
lib/glimac/src/: FreeflyCamera.cpp  SDLWindowManager.cpp  TrackballCamera.cpp
lib/imgui/: imgui_impl_sdl_gl3.cpp
shaders/: 3D.vs.glsl  color.fs.glsl  color.vs.glsl  normal.fs.glsl  skybox.fs.glsl  skybox.vs.glsl  tex3D.fs.glsl  texture2D.fs.glsl
src/: FreeflyCamera.cpp  app.cpp  cube.cpp  display.cpp  gl_exception.cpp  main.cpp  menu.cpp  myshader.cpp  object.cpp  palette.cpp  pinceau.cpp  radialBasisFunctions.cpp  selector.cpp  shader.cpp  skybox.cpp  texture.cpp  vertex.cpp  world.cpp
src/headers/: FreeflyCamera.hpp  config.h  cube.hpp  object.hpp  selector.hpp  shader.hpp
src/shaders/: basic.frag
